<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <EditText
        android:hint="@string/loginHint"
        android:layout_marginTop="6dp"
        android:id="@+id/loginUserED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <EditText
        android:layout_marginTop="6dp"
        android:hint="@string/passwordHint"
        android:id="@+id/passworUserdED"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
    android:layout_marginRight="20dp"
            android:id="@+id/sinInBtn"
            android:text="@string/singInText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <Button
            android:id="@+id/sinUpBtn"
            android:layout_marginLeft="20dp"
            android:text="@string/singUpText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </LinearLayout>

</LinearLayout>